objects/AcntrObj1__c.object
<CustomObject>
    <fields>
        <fullName>AccFt1s__c</fullName>
        <description>Add Description org1 field</description>
        <label>AccFt1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcntrOrg2F1__c</fullName>
        <label>AcntrOrg2F1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AcntrOrg3F1__c</fullName>
        <description>Add AcntrOrg3F1 field</description>
        <label>AcntrOrg3F1</label>
        <type>Phone</type>
    </fields>
</CustomObject>